--- a/CSStack.PrimeBlazor/CSStack.PrimeBlazor.csproj
+++ b/CSStack.PrimeBlazor/CSStack.PrimeBlazor.csproj
@@ -14,6 +14,7 @@
     <PackageTags>Blazor;razor;csharp;C#;CSStack;</PackageTags>
     <PackAsTool>False</PackAsTool>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
 
@@ -27,6 +28,13 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
