--- a/CSStack.PrimeBlazor.PageManager/CSStack.PrimeBlazor.PageManager.Abstractions/CSStack.PrimeBlazor.PageManager.Abstractions.csproj
+++ b/CSStack.PrimeBlazor.PageManager/CSStack.PrimeBlazor.PageManager.Abstractions/CSStack.PrimeBlazor.PageManager.Abstractions.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netstandard2.0</TargetFramework>
+		<IsPackable>true</IsPackable>
+		<RootNamespace>CSStack.PrimeBlazor.PageManager</RootNamespace>
+	</PropertyGroup>
 
 </Project>
