--- a/CSStack.PrimeBlazor.PageManager.Generator/CSStack.PrimeBlazor.PageManager.Generator.csproj
+++ b/CSStack.PrimeBlazor.PageManager.Generator/CSStack.PrimeBlazor.PageManager.Generator.csproj
@@ -5,6 +5,8 @@
 	<LangVersion>latest</LangVersion>
 	<IsRoslynComponent>true</IsRoslynComponent>
 	<AnalyzerLanguage>cs</AnalyzerLanguage>
+	<Nullable>enable</Nullable>
+	<EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
   </PropertyGroup>
 
   <ItemGroup>
